feat: 实现公共字段自动填